# cuDecomp

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  api.html  autotuning.html  basic_usage.html  env_vars.html  genindex.html  index.html  nvshmem.html  objects.inv  overview.html  search.html  searchindex.js
.github/workflows/: build.yml  build_tmp.yml  docs.yaml  format.yaml
_sources/: basic_usage.rst.txt
_sources/api/: f_api.rst.txt
api/: c_api.html  f_api.html
benchmark/: CMakeLists.txt  Makefile  README.md  benchmark.cu  benchmark_config.yaml  benchmark_runner.py
benchmark/heatmap_scripts/: plot_heatmaps.py
benchmark/heatmap_scripts/sample/: benchmark_c2c.dgxa100.8gpu.n2048.csv  benchmark_c2c.dgxa100.8gpu.n2048.float.csv
cmake/: test_mpi_f2c.f90  test_std_fs.cc
configs/: nvhpcsdk.conf  nvhpcsdk_marconi100.conf  nvhpcsdk_pm.conf  nvhpcsdk_summit_spectrum.conf
docs/: Doxyfile  api.rst  autotuning.rst  basic_usage.rst  conf.py  env_vars.rst  index.rst  nvshmem.rst  overview.rst  requirements.txt
docs/api/: c_api.rst  f_api.rst
examples/: Makefile
examples/cc/basic_usage/: CMakeLists.txt  Makefile  basic_usage.cc  basic_usage.cu  basic_usage_autotune.cc  basic_usage_autotune.cu
examples/cc/taylor_green/: CMakeLists.txt  Makefile  README.md  tg.cc  tg.cu
examples/cc/taylor_green/data/: tg_n1024_output.txt  tg_n512_output.txt
examples/fortran/basic_usage/: CMakeLists.txt  Makefile  basic_usage.f90  basic_usage_autotune.f90
examples/fortran/poisson/: CMakeLists.txt  Makefile  poisson.f90
examples/fortran/taylor_green/: CMakeLists.txt  tg.f90
include/: cudecomp.h  cudecomp_version.h  hipdecomp.h
include/internal/: autotune.h  checks.h  comm_routines.h  common.h  cuda_event.h  cuda_wrap.h  cudecomp_kernels.cuh  cudecomp_kernels.h  exceptions.h  graph.h  halo.h  hashes.h  hipdecomp_kernels.h  hipdecomp_kernels.hiph  nvml_wrap.h  nvtx.h  performance.h  raii_wrappers.h  roctx.h  transpose.h  utils.h
src/: autotune.cc  cuda_wrap.cc  cudecomp.cc  cudecomp_kernels.cu  cudecomp_kernels.hip  cudecomp_kernels_rdc.cu  cudecomp_kernels_rdc.hip  cudecomp_m.cuf  cudecomp_m.f90  graph.cc  hipdecomp.cc  hipdecomp_kernels.hip  hipdecomp_kernels_rdc.hip  hipdecomp_m.f90  nvml_wrap.cc  performance.cc
tests/: Makefile  README.md  test_config.yaml  test_runner.py
tests/cc/: CMakeLists.txt  halo_test.cc  transpose_test.cc
tests/ctest/: CMakeLists.txt  api_tests.cc  backend_config.h.in  backend_test_context.cc  backend_test_context.h  backend_utils.cc  backend_utils.h  fortran_api_test.f90  fortran_halo_case.inc  fortran_halo_tests.f90  fortran_transpose_case.inc  fortran_transpose_tests.f90  gpu_test_utils.cc  gpu_test_utils.h  halo_tests.cc  mpi_test_main.cc  mpi_test_utils.cc  mpi_test_utils.h  test_utils.cc  test_utils.h  transpose_tests.cc
tests/fortran/: CMakeLists.txt  halo_test.f90  transpose_test.f90
utils/: bind.sh  dgxa100_map.sh  dgxh100_map.sh  leonardo_map.sh  marconi100_map.sh  pm_map.sh  summit_map.sh
